<resources>
    <string name="app_name">MarketApp</string>
    <string name="scan_product">Scan Product</string>
    <string name="view_cart">View Cart</string>
    <string name="allow_camera">Allow Camera Access</string>
    <string name="product_id_detail">Id: </string>
    <string name="product_name_detail">Name: </string>
    <string name="product_price_detail">Price: </string>
    <string name="product_quantity_detail">Quantity: </string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="voucher">Retrieve Voucher</string>
    <string name="order">Order</string>
    <string name="selectVoucher">Select a voucher to get a discount:</string>
    <string name="remove_product">Remove</string>
    <string name="shopping_cart_total">Total:</string>
    <string name="bt_finishActivity">Finish Activity After using QR Code</string>
    <string name="emptyListText" />
</resources>