<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/product_id_detail"
            android:padding="3dip" />

        <TextView
            android:id="@+id/lblDetailId"
            android:gravity="center"
            android:padding="3dip"
            android:text="ID HERE" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/product_name_detail"
            android:padding="3dip" />

        <TextView
            android:id="@+id/lblDetailName"
            android:gravity="center"
            android:padding="3dip"
            android:text="NAME HERE" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/product_price_detail"
            android:padding="3dip" />

        <TextView
            android:id="@+id/lblDetailPrice"
            android:gravity="center"
            android:padding="3dip"
            android:text="PRICE HERE" />
    </TableRow>

    <Button
        android:id="@+id/btnAddToCart"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/add_to_cart" />


</TableLayout>
