<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/selectVoucher" />

            <Spinner
                android:id="@+id/voucher_spinner"
                android:gravity="center"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/shopping_cart_total"
                android:padding="3dip" />

            <TextView
                android:id="@+id/lblShoppingCartTotal"
                android:gravity="center"
                android:padding="3dip"
                android:text="TOTAL HERE" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnOrder"
            android:text="@string/order"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>